generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mongodb"
  url      = env("DATABASE_URL")
}

// ==========================================
// ENUMS POUR LIMITER LES VALEURS AUTORISÉES
// ==========================================

enum UserStatut {
  actif
  desactive
}

enum DemandeAccesStatut {
  en_attente
  approuvee
  refusee
}

enum Role {
  admin
  employe
}

enum PointageType {
  entree
  sortie
}

enum CongeType {
  annuel
  maladie
  exceptionnel
}

enum CongeStatut {
  en_attente
  valide
  refuse
}

// ==========================================
// MODÈLES (SCHEMAS)
// ==========================================

model User {
  id               String     @id @default(auto()) @map("_id") @db.ObjectId
  nom              String
  email            String     @unique
  password         String
  role             Role
  statut           UserStatut @default(actif)
  doit_changer_mdp Boolean    @default(false)

  pointages Pointage[]
  conges    Conge[]

  @@map("users")
}

model DemandeAcces {
  id              String             @id @default(auto()) @map("_id") @db.ObjectId
  nom             String
  email           String
  telephone       String?
  message         String?
  statut          DemandeAccesStatut @default(en_attente)
  date_demande    DateTime           @default(now())
  date_traitement DateTime?
  traite_par      String?
  userId          String?            @db.ObjectId

  @@map("demandes_acces")
}

model ParametresEntreprise {
  id           String @id @default("default") @map("_id")
  latitude     Float
  longitude    Float
  rayon_metres Float

  @@map("parametres_entreprise")
}

model Pointage {
  id        String       @id @default(auto()) @map("_id") @db.ObjectId
  
  // Relation avec User
  user_id   String       @db.ObjectId
  user      User         @relation(fields: [user_id], references: [id], onDelete: Cascade)

  date      String       // Format YYYY-MM-DD
  heure     String       // Format HH:MM
  type      PointageType
  latitude  String?      // Optionnel
  longitude String?      // Optionnel
  valide    Boolean?     @default(false) // Validation explicite ou valeur par défaut

  @@map("pointages")
}

model Conge {
  id         String      @id @default(auto()) @map("_id") @db.ObjectId
  
  // Relation avec User
  user_id    String      @db.ObjectId
  user       User        @relation(fields: [user_id], references: [id], onDelete: Cascade)

  date_debut DateTime
  date_fin   DateTime
  type       CongeType
  statut     CongeStatut @default(en_attente) // Valeur par défaut "en_attente"

  @@map("conges")
}
